[tool.poetry]
name = "personal-web"
version = "0.1.0"
description = "personal web"
authors = ["shui <164635470@qq.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1"
flask-bootstrap = "^3.3"
flask-login = "^0.4.1"
flask-mail = "^0.9.1"
flask-moment = "^0.9.0"
flask-sqlalchemy = "^2.4"
flask-dropzone = "^1.5"
flask-wtf = "^0.14.2"
flask-avatars = "^0.2.2"
flask-whooshee = "^0.7.0"
python-dotenv = "^0.10.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

